--- a/harness-test/pom.xml
+++ b/harness-test/pom.xml
@@ -44,11 +44,11 @@
             <version>${spring-ai-agents.version}</version>
         </dependency>
 
-        <!-- Process execution -->
+        <!-- Process execution / Sandbox -->
         <dependency>
-            <groupId>org.zeroturnaround</groupId>
-            <artifactId>zt-exec</artifactId>
-            <version>${zt-exec.version}</version>
+            <groupId>org.springaicommunity</groupId>
+            <artifactId>spring-ai-sandbox-core</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
         </dependency>
 
         <!-- YAML parsing -->
@@ -61,11 +61,19 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
-        <!-- Spring AI (for ChatClient in LLM judges) -->
+        <!-- Spring AI (for ChatClient in LLM judges and IT tests) -->
         <dependency>
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-anthropic</artifactId>
-            <optional>true</optional>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Spring Framework 7.x core (required by spring-ai-anthropic for RetryException) -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>7.0.2</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- Claude Code SDK (for comparison testing) -->
@@ -73,6 +81,13 @@
             <groupId>org.springaicommunity</groupId>
             <artifactId>claude-code-sdk</artifactId>
             <version>1.0.0-SNAPSHOT</version>
+            <optional>true</optional>
+        </dependency>
+
+        <!-- Agent Harness (for in-process MiniAgent execution) -->
+        <dependency>
+            <groupId>org.springaicommunity.agents</groupId>
+            <artifactId>harness-agents</artifactId>
             <optional>true</optional>
         </dependency>
 
