Add CompilationJudge for deterministic Java compilation verification
- CompilationJudge runs javac on workspace Java files
- Add 'compiles' criterion type to SuccessCriterion
- JuryFactory handles new criterion with 0.4 weight
- 4 unit tests covering: no files, valid, invalid, multi-file
- Also includes intermediate test comparison reports

--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ hs_err_pid*
 replay_pid*
 
 ### Planning and Internal Documentation ###
-plans/
-learnings/
+# Ignore planning docs except learnings (tracked for knowledge retention)
+plans/*
+!plans/learnings/
 tests/ai-driver/logs/
