Add comparison test improvements and caching
TestHarness:
- Fix NPE in saveTranscript when output is null

ComparisonRunner:
- Run baseline agent first for better debugging
- Add result caching to speed up iteration
- Cache stored in .claude-code-cache/ directory

RunAITest:
- Fix --compare command auto-config for advanced tests
- Add --no-cache flag to bypass caching
- Update help text with correct max turns (100)

Test cases:
- Update 31-config-parser-fix prompt to imperative form

--- a/tests/ai-driver/use-cases/advanced/31-config-parser-fix.yaml
+++ b/tests/ai-driver/use-cases/advanced/31-config-parser-fix.yaml
@@ -283,17 +283,18 @@ setup:
         }
 
 prompt: |
-  The configuration parser has bugs causing it to fail on certain inputs.
+  Fix the bugs in src/ConfigParser.java so that all tests pass.
 
   The workspace contains:
-  - src/ConfigParser.java - Configuration file parser (has bugs)
-  - src/ConfigValue.java - Configuration value holder (complete)
-  - test/ConfigParserTest.java - Tests that should pass
+  - src/ConfigParser.java - Configuration file parser (has bugs marked with BUG comments)
+  - src/ConfigValue.java - Configuration value holder (complete, do not modify)
+  - test/ConfigParserTest.java - Tests that verify the fixes
 
-  Requirements:
-  1. Fix all bugs in ConfigParser.java
-  2. Handle: comments (#), empty lines, key=value, quoted values, whitespace
-  3. All tests must pass: javac src/*.java test/*.java && java -cp .:src:test ConfigParserTest
+  You must:
+  1. Read the files to understand the bugs
+  2. Edit src/ConfigParser.java to fix each bug
+  3. Run the tests to verify: javac src/*.java test/*.java && java -cp .:src:test ConfigParserTest
+  4. Submit when all 10 tests pass
 
 expectedBehavior: |
   Agent should:
